# Baseee

./: .gitignore  Build.sh  LICENSE  README.md  install.sh
.github/: FUNDING.yml
.github/workflows/: Build.yml  codeql-analysis.yml
baseee/: .gitignore  BaseeeConfig.cmake.in  CMakeLists.txt  CMakeSettings.json  config.h  unit-test.cpp
baseee/baseee-log/: CMakeLists.txt  log.cpp  log.hpp
baseee/baseee-string/: CMakeLists.txt  string.cpp  string.hpp
baseee/src/baseee-components/: global.hpp
baseee/src/baseee-log/: CMakeLists.txt  log.cpp  log.hpp
baseee/src/baseee-parser/: cson.hpp  inip.cpp  inip.hpp  jsonb.cpp  jsonp.cpp  jsonp.hpp
baseee/src/baseee-string/: CMakeLists.txt  coder.cpp  string.cpp  string.hpp
baseee/src/baseee-test/: test.hpp
doc/: baseee.md  code.md  log.md
docs/: README.md
docs/en-us/: FAQ.md  index.md  install.md
docs/zh-cn/: FAQ.md  index.md  install.md
docs/zh-cn/logger/: log_index.md
docs/zh-cn/parser/: parser_index.md
docs/zh-cn/string/: string_index.md
src/: Baseee.hpp
src/code/: base64.cpp  code.cpp  code.hpp
src/ini/: ini.cpp  ini.hpp
src/log/: log.cpp  log.hpp  out.cpp
src/string/: makeString.cpp  string.cpp  string.hpp  utfEncoder.cpp
